# ShadowAuto

./: .gitignore  README.md  README.zh-CN.md  index.html  settings.gradle
android-shell/: build.gradle
android-shell/src/main/: AndroidManifest.xml
android-shell/src/main/java/com/silentauto/shell/: ActionDecision.java  ActionTools.java  AiClient.java  AppCatalog.java  AutomationEngine.java  ClipboardBridge.java  Config.java  DisplaySpec.java  FrameStreamer.java  InputBridge.java  JsonRpc.java  LogHub.java  Main.java  OcrTest.java  RpcServer.java  ScreenCapture.java  ShellContext.java  UiBridge.java  UiNodeUtils.java  VideoStreamer.java  VideoTest.java  VirtualDisplaySession.java  WindowManagerBridge.java
android-stubs/src/main/java/android/app/: ActivityThread.java  IActivityManager.java  IUiAutomationConnection.java  UiAutomationConnection.java
android-stubs/src/main/java/android/content/: Context.java  IContentProvider.java
android-stubs/src/main/java/android/content/pm/: IPackageManager.java
android-stubs/src/main/java/android/database/: Cursor.java
android-stubs/src/main/java/android/graphics/: Bitmap.java  Canvas.java  Paint.java  Point.java  Rect.java
android-stubs/src/main/java/android/hardware/: HardwareBuffer.java
android-stubs/src/main/java/android/hardware/display/: DisplayManagerGlobal.java
android-stubs/src/main/java/android/os/: IPowerManager.java  ServiceManager.java  SystemProperties.java
android-stubs/src/main/java/android/view/: Display.java  IWindowManager.java  SurfaceControl.java  WindowManagerGlobal.java  WindowManagerImpl.java
android-stubs/src/main/java/android/window/: ScreenCapture.java
android-stubs/src/main/java/dalvik/system/: VMRuntime.java
assets/: index-BdDe_6DA.css  index-D2WdLyhP.js
controller-app/: build.gradle
controller-app/src/main/: AndroidManifest.xml
controller-app/src/main/java/com/silentauto/controller/: AiConfig.java  AiConfigScreen.java  AiConfigStore.java  AutomationTaskView.java  ConfigActivity.java  H264VideoDecoder.java  HelpActivity.java  KeepAliveService.java  MainActivity.java  RpcClient.java  TaskPagerAdapter.java  UiUtils.java
controller-app/src/main/res/drawable/: bg_card.xml  bg_icon_bubble.xml  bg_icon_button.xml  bg_input.xml  bg_log.xml  bg_screen.xml  button_fab.xml  button_primary.xml  button_secondary.xml  ic_help_24.xml  ic_help_dot.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml  ic_stop_24.xml
controller-app/src/main/res/layout/: activity_config.xml  activity_help.xml  activity_main.xml  dialog_screen_preview.xml  item_task.xml  pager_holder.xml
controller-app/src/main/res/values/: colors.xml  strings.xml  styles.xml
controller-app/src/main/res/values-zh/: strings.xml
docs/: android-virtual-display-ai-automation.en.md  android-virtual-display-ai-automation.md
gradle/wrapper/: gradle-wrapper.properties
paddler-ocr/: build.gradle
paddler-ocr/src/main/cpp/: CMakeLists.txt  native.cpp  ocr_cls_process.cpp  ocr_crnn_process.cpp  ocr_ppredictor.cpp  paddle_ocr_registrations.cpp
paddler-ocr/src/main/java/com/silentauto/paddlerocr/: PaddleOcrEngine.java  PaddleOcrNative.java  PaddleOcrResult.java
scripts/: emulator-mock-ai-test.mjs
web-launcher/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-launcher/src/: App.svelte  main.ts
web-launcher/src/lib/: tango-adb.ts
web-launcher/src/routes/: +page.svelte
web-launcher/static/: silent-shell.apk
